<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_screen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_background"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000" />

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo"
            android:layout_marginLeft="75dp"
            app:layout_constraintBottom_toTopOf="@+id/splash_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/app_tittle"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="100dp"
            android:text="@string/splash_description"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="370dp"
            android:layout_marginLeft="100dp"
            android:text="@string/splash_description2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_button"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:padding="12dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>